# libcdoc

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  annotated.html  annotated_dup.js  build.ps1  classes.html  classlibcdoc_1_1CDocReader-members.html  classlibcdoc_1_1CDocReader.html  classlibcdoc_1_1CDocReader.js  classlibcdoc_1_1CDocWriter-members.html  classlibcdoc_1_1CDocWriter.html  classlibcdoc_1_1CDocWriter.js  classlibcdoc_1_1ConsoleLogger-members.html  classlibcdoc_1_1ConsoleLogger.html  classlibcdoc_1_1ConsoleLogger.js  classlibcdoc_1_1ILogger-members.html  classlibcdoc_1_1ILogger.html  classlibcdoc_1_1ILogger.js  classlibcdoc_1_1Logger-members.html  classlibcdoc_1_1Logger.html  classlibcdoc_1_1Logger.js  dir_947037680fa9ae164df1747373a70240.html  dir_e68e8157741866f444e17edd764ebbae.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  (+137 more)
.github/workflows/: build.yml
cdoc/: CDoc.cpp  CDoc.h  CDoc1Reader.cpp  CDoc1Reader.h  CDoc1Writer.cpp  CDoc1Writer.h  CDoc2.h  CDoc2Reader.cpp  CDoc2Reader.h  CDoc2Writer.cpp  CDoc2Writer.h  CDocChipher.cpp  CDocChipher.h  CDocCipher.cpp  CDocCipher.h  CDocException.cs  CDocException.java  CDocReader.h  CDocWriter.h  CMakeLists.txt  Certificate.cpp  Certificate.h  Configuration.cpp  Configuration.h  ConsoleLogger.h  Crypto.cpp  Crypto.h  CryptoBackend.cpp  CryptoBackend.h  DDocReader.cpp  DDocReader.h  DDocWriter.cpp  DDocWriter.h  Exports.h  ILogger.h  IStreamSource.java  Io.cpp  Io.h  KeyShares.cpp  KeyShares.h  (+28 more)
cdoc/json/: base.h  jwt.h  traits.h
cdoc/schema/: header.fbs  recipients.fbs
cdoc/utils/: ct.h  memory.h
debian/: changelog  control  copyright  libcdoc-dev.install  libcdoc1.install  libcdoc1.lintian-overrides  not-installed
doc/: ABOUT  intro.md  overview.md  tool.md  usage.md
etc/: Doxyfile.in
examples/java/: README.md  build.gradle  settings.gradle
examples/java/src/main/java/ee/ria/cdoc/: CDocTool.java
examples/java/src/main/java/ee/ria/libcdoc/: CDocTool.java
libcdoc/: CDoc.cpp  CDoc.h  CDoc1Reader.cpp  CDoc1Reader.h  CDoc1Writer.cpp  CDoc1Writer.h  CDoc2.h  CDoc2Reader.cpp  CDoc2Reader.h  CDoc2Writer.cpp  CDoc2Writer.h  CDocChipher.cpp  CDocChipher.h  CDocException.java  CDocReader.h  CDocWriter.h  CMakeLists.txt  Certificate.cpp  Certificate.h  Configuration.h  ConsoleLogger.h  Crypto.cpp  Crypto.h  CryptoBackend.cpp  CryptoBackend.h  DDocReader.cpp  DDocWriter.cpp  Exports.h  ILogger.h  IStreamSource.java  Io.cpp  Io.h  Lock.cpp  Lock.h  LogEngine.cpp  NetworkBackend.cpp  NetworkBackend.h  PKCS11Backend.cpp  PKCS11Backend.h  RcptInfo.h  (+17 more)
test/: CMakeLists.txt  libcdoc_boost.cpp  pipe.h
test/data/: ec-secp256r1-cert.der  ec-secp256r1-priv.der  ec-secp256r1-pub.der  ec-secp384r1-cert.der  ec-secp384r1-priv.der  ec-secp384r1-pub.der  ec-secp521r1-cert.der  ec-secp521r1-priv.der  ec-secp521r1-pub.der  keyserver-cert.der  rsa_2048_cert.der  rsa_2048_priv.der  rsa_2048_pub.der  test_data.txt
vcpkg-triplets/: arm-neon-android.cmake  arm64-android.cmake  arm64-x64-osx.cmake  x64-android.cmake
